# monorepo

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  2020_11_12_06_11_Manual_Workout.tcx  CMakeLists.txt  LICENSE  Makefile  README.md  monikas_game.dot  shell.nix
app/: CMakeLists.txt
app/extract_stats/: main.cpp
apps/: CMakeLists.txt
apps/MaxRunStats/: CMakeLists.txt  README.md
apps/MaxRunStats/src/: main.cpp
apps/MaxRunStats/util/nix/: shell.nix
apps/TicTacToe/: CMakeLists.txt  monikas_game.dot
apps/TicTacToe/include/ttt/: board.hpp  move.hpp
apps/TicTacToe/include/tttai/: get_best_move.hpp
apps/TicTacToe/src/cli/: game.cpp  game.hpp
apps/TicTacToe/src/gv/: main.cpp
apps/TicTacToe/src/toe/: main.cpp  server.hpp
apps/TicTacToe/src/ttt/: board.cpp  cell.cpp  move.cpp
apps/TicTacToe/test/toe/: search_moves.cpp
apps/TicTacToe/test/ttt/: board.cpp  cell.cpp
apps/cli/: CMakeLists.txt
apps/cli/src/: game.cpp  game.hpp  main.cpp
apps/client/: CMakeLists.txt
apps/client/src/: cli.cpp  game.cpp  game.hpp  game_connector.cpp  game_connector.hpp  main.cpp  network_client.hpp  opponent.cpp  opponent.hpp  remote_opponent.hpp  socket.cpp  socket.hpp  test_connector.cpp  test_connector.hpp  test_opponent.cpp  test_opponent.hpp
apps/cracks/: CMakeLists.txt  README.md
apps/cracks/input/sbee/: confirmed_words.txt  sb_words.txt
apps/cracks/src/: sudoku.cpp  wordle.cpp
apps/goon/: CMakeLists.txt  README.md
apps/goon/src/: Dispatcher.cpp  Dispatcher.hpp  EventHandler.hpp  Keyboard.hpp  Signal.hpp  Widget.cpp  Widget.hpp  Window.cpp  Window.hpp
apps/gv/: CMakeLists.txt
apps/hwclient/: CMakeLists.txt
apps/hwserver/: CMakeLists.txt
apps/jrny/: CMakeLists.txt  README.md
apps/jrny/src/: jrny.cpp  main.cpp
apps/ogre/: CMakeLists.txt
apps/ogre/apps/task/src/: main.cpp
apps/ogre/libs/libcli/include/cli/: Application.hpp  Command.hpp
apps/ogre/libs/libcli/src/cli/: Command.cpp
apps/ogre/libs/libcli/test/cli/: Command.cpp
apps/ogre/libs/libuuid/include/uuid/: uuid.hpp
apps/ogre/libs/libuuid/src/uuid/: uuid.cpp
apps/prune/: CMakeLists.txt
apps/prune/src/: main.cpp
apps/rec/: CMakeLists.txt
apps/rec/src/: main.cpp
apps/sbee/: CMakeLists.txt  README.md
apps/sbee/.github/workflows/: cmake3.yml
apps/sbee/input/: confirmed_words.txt
apps/sbee/src/: recommendation_engine.cpp  recommendation_engine.hpp  sbee.cpp
apps/sbee/test/: recommendation_engine.cpp
apps/sbee/util/nix/: shell.nix
apps/server/: CMakeLists.txt
apps/server/src/: serv.cpp
apps/solver/: CMakeLists.txt  README.md
apps/solver/src/: Scanner.cpp  Scanner.hpp  Solve.cpp  Solve.hpp  Token.cpp  Token.hpp  main.cpp
apps/stacks/: CMakeLists.txt  README.md
apps/stacks/src/: Board.cpp  Board.hpp  executor.cpp  find_all.cpp  main.cpp
apps/stacks/src/graph/: a_star_search.hpp
apps/stacks/src/stacksolve/: stack_state.hpp
apps/stacks/src/vodka/: dynarray_2d.hpp
apps/toe/: CMakeLists.txt
apps/toe/src/: find_server.cpp  find_server.hpp  main.cpp  search_moves.cpp  server.cpp  server.hpp  udp_socket.cpp  udp_socket.hpp
apps/zmq-guide/: CMakeLists.txt
data/: 2020_11_12_06_11_Manual_Workout.tcx
include/argc++/: Application.hpp  Argument.hpp
include/coord/: enu.hpp
include/nmea/: SentenceType.hpp  TalkerId.hpp
include/util/: crc32.hpp  get_config_path.hpp  (+2 more)
input/: confirmed_words.txt  sb_words.txt
inputs/: confirmed_words.txt
libs/: CMakeLists.txt
libs/libargc/: CMakeLists.txt  README.md
libs/libargc/include/argc++/: Application.hpp  Argument.hpp
libs/libargc/src/argc++/: Application.cpp  Argument.cpp
libs/libargc/test/argc++/: test_help.cpp  test_version.cpp
libs/libcli/: CMakeLists.txt
libs/libcli/include/cli/: Command.hpp
libs/libcoord/: CMakeLists.txt  README.md
libs/libcoord/include/coord/: ecef.hpp  frd.hpp  lla.hpp  ned.hpp  rae.hpp
libs/libcoord/src/coord/: rae.cpp
libs/liblynel/: CMakeLists.txt  README.md
libs/liblynel/include/lynel/: basic_matrix.hpp  matrix.hpp
libs/liblynel/test/books/: LinearAlgebra_TheoryIntuitionCode.cpp
libs/libnmea/: CMakeLists.txt
libs/libnmea/include/nmea/: Sentence.hpp
libs/libnmea/src/nmea/: parse.cpp
libs/libnmea/test/nmea/: nmea.cpp  parse.cpp
libs/libsbee/: CMakeLists.txt
libs/libsbee/src/: recommendation_engine.cpp
libs/libsbee/test/: recommendation_engine.cpp
libs/libstacks/: CMakeLists.txt
libs/libstacks/include/stacks/: board.hpp  executor.hpp  stack_state.hpp
libs/libstacks/include/vodka/: dynarray_2d.hpp
libs/libstacks/src/: board.cpp  executor.cpp  i_node.cpp
libs/libstacks/test/: board.cpp  stack_state.cpp
libs/libstats/: CMakeLists.txt  README.md
libs/libstats/include/stats/: distribution.hpp
libs/libstats/test/: distribution.cpp
libs/libstats/util/nix/: shell.nix
libs/libttt/: CMakeLists.txt
libs/libttt/include/: tictactoe.hpp
libs/libttt/include/ttt/: bad_move.hpp  board.hpp  cell.hpp  cell_value.hpp  get_best_move.hpp  move.hpp  player.hpp
libs/libttt/src/: board.cpp  cell.cpp  get_best_move.cpp  move.cpp  tictactoe.cpp
libs/libttt/test/: board.cpp  cell.cpp  get_best_move.cpp
libs/libttt/test/ttt/: board.cpp
libs/libtttai/: CMakeLists.txt
libs/libtttai/include/tttai/: get_best_move.hpp
libs/libtttai/src/: get_best_move.cpp
libs/libtttai/test/: get_best_move.cpp
libs/libutil/: CMakeLists.txt  README.md
libs/libutil/include/util/: crc32.hpp  get_config_path.hpp  get_home_path.hpp
libs/libutil/src/util/: crc32.cpp  get_home_path.cpp
libs/libutil/test/util/: crc32.cpp  string_contains.cpp
libs/libutil/util/scripts/: setup.sh
src/: CMakeLists.txt  Dispatcher.cpp  Dispatcher.hpp  EventHandler.cpp  EventHandler.hpp  Keyboard.hpp  Signal.hpp  Widget.cpp  Widget.hpp  Window.cpp  Window.hpp  jrny.cpp  main.cpp  prune.cpp  rec.cpp  recommendation_engine.cpp  recommendation_engine.hpp  sbee.cpp
src/argc++/: Application.cpp  Argument.cpp
src/toe/: server.cpp
src/ttt/: board.cpp
src/util/: crc32.cpp  get_config_path.cpp  get_home_path.cpp
test/: recommendation_engine.cpp
test/unit_test/: CMakeLists.txt
(+35 files in other folders)
